# VoodooEquations

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/linsys/: linearsystem.cpp  linearsystem.h  parser.h  session.cpp  session.h  systemParsingUtility.hpp  systemSolutionParsingUtility.h  systemparts.cpp  systemparts.h
src/linsys/util/: systemParsingUtility.hpp  systemSolutionParsingUtility.h
src/menu/: challengeUserMenuOption.cpp  challengeUserMenuOption.hpp  createRandomSystemsMenuOption.cpp  createRandomSystemsMenuOption.hpp  deferringmenuoption.h  displayMenuOption.cpp  displayMenuOption.hpp  getSystemFromUserMenuOption.cpp  getSystemFromUserMenuOption.hpp  menu.cpp  menu.h  quitMenuOption.cpp  quitMenuOption.hpp  readSystemsFromFile.cpp  readSystemsFromFile.hpp
src/menu/options/: challengeUserMenuOption.hpp  createRandomSystemsMenuOption.cpp  createRandomSystemsMenuOption.hpp  deferringmenuoption.cpp  deferringmenuoption.h  displayMenuOption.hpp  getSystemFromUserMenuOption.cpp  getSystemFromUserMenuOption.hpp  quitMenuOption.cpp  quitMenuOption.hpp  readSystemsFromFile.cpp  readSystemsFromFile.hpp
